# robotframework-jupyterlibrary

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  anaconda-project.yml  azure-pipelines.yml  dodo.py  environment.yml  package.json  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.binder/: labex.txt  postBuild
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/env_specs/: _base.yml  docs.yml  lab1.yml  lab2.yml  lab2rc.yml  lab3.yml  lab3rc.yml  lab4.yml  lab_1.yml  lint.yml  meta.yml  py3.10.yml  py3.11.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml  py_3.9.yml  test-py3.7.yml  test.yml  tests.yml
.github/recipe/: meta.yaml.in
.github/workflows/: ci.yml  tests.yml
_ci/: environment.yml  steps.conda.full.yml  steps.conda.test.yml
_env_specs/: lab_1.yml
_scripts/: __init__.py  atest.py  combine.py  lint.py  lock.py  project.py  reporter.py
atest/: __init__.robot  run.py
atest/00_smoke/: 00_import.robot
atest/01_server/: 00_basic.robot
atest/acceptance/: __init__.robot
atest/acceptance/00_smoke/: 00_import.robot
atest/acceptance/01_server/: 00_basic.robot
atest/acceptance/10_lab/: 00_shell.robot  10_notebook.robot  __init__.robot
atest/acceptance/classic/: 10_notebook.robot  __init__.robot
atest/acceptance/lab/: 00_shell.robot  10_notebook.robot  __init__.robot
atest/acceptance/nteract/: 10_notebook.robot  __init__.robot
atest/classic/: 10_notebook.robot  __init__.robot
atest/lab/: 00_shell.robot  10_notebook.robot  20_magic.robot  30_settings.robot  __init__.robot
atest/notebook/: 10_notebook.robot  __init__.robot
binder/: postBuild
ci/: job.combine.yml  job.test.yml  steps.common.yml  steps.conda.full.yml  steps.conda.test.yml  steps.conda.yml
docs/: CI.ipynb  HISTORY.ipynb  INSTALL.ipynb  KEYWORDS.ipynb  LIMITS.ipynb  MAGIC.ipynb  WHY.ipynb  conf.py  environment.yml  index.ipynb  rtd.yml
docs/_static/css/: custom.css
docs/source/: conf.py  index.rst
docs/source/_static/: JupyterLab.html  JupyterLibrary.html  jupyterlab.html
docs/source/_static/css/: custom.css
docs/source/notebooks/: INSTALL.ipynb  KEYWORDS.ipynb
scripts/: __init__.py  atest.py  lint.py
src/JupyterLibrary/: __init__.py  _version.py  constants.py  core.py  magic.py
src/JupyterLibrary/clients/: README.md
src/JupyterLibrary/clients/classic/: Commands.resource  Notebook.resource  Output.resource  Selectors.resource  Tree.resource
src/JupyterLibrary/clients/jupyterlab/: Commands.resource  Commands.robot  Icons.resource  Icons.robot  Launcher.resource  Launcher.robot  Notebook.resource  Notebook.robot  Output.resource  Output.robot  PageInfo.resource  PageInfo.robot  Selectors.resource  Selectors.robot  Settings.resource  Settings.robot  Shell.resource  Shell.robot  Shortcuts.resource  Shortcuts.robot  Sidebar.resource  Sidebar.robot  Version.resource
src/JupyterLibrary/clients/notebook/: Commands.resource  Commands.robot  Notebook.resource  Notebook.robot  Output.resource  Output.robot  Selectors.resource  Selectors.robot  Tree.resource  Tree.robot
src/JupyterLibrary/clients/nteract_on_jupyter/: Notebook.robot  Output.robot  Selectors.robot  Tree.robot
src/JupyterLibrary/common/: CodeMirror.resource  CodeMirror.robot  Lumino.resource
src/JupyterLibrary/keywords/: __init__.py  keys.py  screenshots.py  server.py  webelements.py
src/JupyterLibrary/resources/JupyterLab/: Commands.robot  Launcher.robot  Notebook.robot  Output.robot  Shell.robot  Sidebar.robot
src/JupyterLibrary/resources/NotebookClassic/: Commands.robot  Notebook.robot  Selectors.robot  Tree.robot
src/JupyterLibrary/resources/jupyterlab/: Commands.robot  Launcher.robot  Notebook.robot  Output.robot  Selectors.robot  Shell.robot  Sidebar.robot
