[metadata]
name = robotframework-jupyterlibrary
description = A Robot Framework library for testing Jupyter end-user applications and extensions
long_description = file: README.md, CHANGELOG.md
url = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary
author = Nicholas Bollweg
author_email = nick.bollweg@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Jupyter
    notebook
    Testing
    Web
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
install_requires =
    robotframework >3
    robotframework-seleniumlibrary
    pillow
    six
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-complexity = 10
max-line-length = 88
ignore = E203,W503

[isort]
lines_after_imports = 2
line_length = 88
