[metadata]
name = robotframework-jupyterlibrary
version = file: src/JupyterLibrary/VERSION
description = A Robot Framework library for automating (testing of) Jupyter end-user applications and extensions
python_requires = >=3.8
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary
project_urls =
    Bug Tracker     = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary/issues
    Changelog       = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary/blob/main/docs/HISTORY.ipynb
    CI              = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary/actions
    Documentation   = https://robotframework-jupyterlibrary.readthedocs.io/en/stable
    Releases        = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary/releases
    Source Code     = https://github.com/robots-from-jupyter/robotframework-jupyterlibrary
author = Robots from Jupyter
author_email = nick.bollweg@gmail.com
license = BSD-3-Clause
license-file = LICENSE
description-file = README.md
keywords =
    Interactive
    Jupyter
    notebook
    Testing
    Web
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: 4
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.8
install_requires =
    robotframework >=4
    robotframework-seleniumlibrary >=4.5
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-complexity = 10
max-line-length = 88
ignore = E203,W503

[isort]
lines_after_imports = 2
line_length = 88
